<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:background="#72DAC8F1"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/tv_date_title"
        android:text="@string/date"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_temp_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_feels_like_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date_title"
        android:text="@string/feels_like"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_temp_title"
        app:layout_constraintTop_toBottomOf="@id/tv_date_title"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_humidity_title"
        android:text="@string/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_feels_like_title"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_temp_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_feels_like_title"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_temp_title"
        android:text="@string/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_humidity_title"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_temp_title"
        app:layout_constraintTop_toBottomOf="@id/tv_humidity_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_temp_max_title"
        android:text="@string/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_temp_title"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_temp_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_temp_title"
        app:layout_constraintTop_toBottomOf="@id/tv_temp_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_temp_min_title"
        android:text="@string/Low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_temp_max_title"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_temp_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_temp_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_temp_max_title"
        android:textSize="12sp" />


</androidx.constraintlayout.widget.ConstraintLayout>
